# assignment4-data

./: .gitignore  AGENTS.md  Answers.ipynb  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_and_make_submission.sh
configs/experiment/: your_data.yaml
cs336_basics/: train_config.py
cs336_data/: common.py  modal_utils.py  wet_files.py
scripts/: download_data.py  generate_with_gpt2_tok.py  train.py
tests/: adapters.py  test_quality.py
